; ModuleID = '/home/carl/AnghaBench/git/extr_apply.c_checkout_target.c'
source_filename = "/home/carl/AnghaBench/git/extr_apply.c_checkout_target.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.checkout = type { i32, %struct.index_state* }
%struct.index_state = type { i32 }
%struct.cache_entry = type { i32 }
%struct.stat = type { i32 }

@CHECKOUT_INIT = common dso_local global %struct.checkout zeroinitializer, align 8
@.str = private unnamed_addr constant [19 x i8] c"cannot checkout %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.index_state*, %struct.cache_entry*, %struct.stat*)* @checkout_target to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @checkout_target(%struct.index_state* %0, %struct.cache_entry* %1, %struct.stat* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.index_state*, align 8
  %6 = alloca %struct.cache_entry*, align 8
  %7 = alloca %struct.stat*, align 8
  %8 = alloca %struct.checkout, align 8
  store %struct.index_state* %0, %struct.index_state** %5, align 8
  store %struct.cache_entry* %1, %struct.cache_entry** %6, align 8
  store %struct.stat* %2, %struct.stat** %7, align 8
  %9 = bitcast %struct.checkout* %8 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %9, i8* align 8 bitcast (%struct.checkout* @CHECKOUT_INIT to i8*), i64 16, i1 false)
  %10 = getelementptr inbounds %struct.checkout, %struct.checkout* %8, i32 0, i32 0
  store i32 1, i32* %10, align 8
  %11 = load %struct.index_state*, %struct.index_state** %5, align 8
  %12 = getelementptr inbounds %struct.checkout, %struct.checkout* %8, i32 0, i32 1
  store %struct.index_state* %11, %struct.index_state** %12, align 8
  %13 = load %struct.cache_entry*, %struct.cache_entry** %6, align 8
  %14 = call i64 @checkout_entry(%struct.cache_entry* %13, %struct.checkout* %8, i32* null, i32* null)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %23, label %16

16:                                               ; preds = %3
  %17 = load %struct.cache_entry*, %struct.cache_entry** %6, align 8
  %18 = getelementptr inbounds %struct.cache_entry, %struct.cache_entry* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load %struct.stat*, %struct.stat** %7, align 8
  %21 = call i64 @lstat(i32 %19, %struct.stat* %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %29

23:                                               ; preds = %16, %3
  %24 = call i32 @_(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  %25 = load %struct.cache_entry*, %struct.cache_entry** %6, align 8
  %26 = getelementptr inbounds %struct.cache_entry, %struct.cache_entry* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @error(i32 %24, i32 %27)
  store i32 %28, i32* %4, align 4
  br label %30

29:                                               ; preds = %16
  store i32 0, i32* %4, align 4
  br label %30

30:                                               ; preds = %29, %23
  %31 = load i32, i32* %4, align 4
  ret i32 %31
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i64 @checkout_entry(%struct.cache_entry*, %struct.checkout*, i32*, i32*) #2

declare dso_local i64 @lstat(i32, %struct.stat*) #2

declare dso_local i32 @error(i32, i32) #2

declare dso_local i32 @_(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
